# MyPhotos

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  STYLE_GUIDE.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/skills/claude-md-management/: SKILL.md
.github/workflows/: docker.yml  ghcr-cleanup.yml  setup-scripts-lint.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users.py  0003_shares.py  0004_ratings_comments.py  0005_tags_description.py  0006_classification.py  0007_share_items.py  0008_share_download_limit.py  0009_photo_auto_tags.py  0010_photo_file_size_index.py  0011_root_ignore_paths.py  0012_user_permission_flags.py  0013_root_acl.py  0014_folder_acl.py  0015_photo_visibility.py  0016_backfill_visibility.py  0017_trash_isolation_audit.py  0018_uploads_pending.py  0019_share_strip_exif.py  0020_photo_fts.py  0021_user_display_name.py  0022_job_progress.py  0023_folder_acl_path_prefix_varchar.py  0024_rel_path_varchar.py  0025_photos_file_size_bigint.py  0026_rel_path_binary_collation.py  0027_video_proxy.py  0028_root_owner_from_subfolder.py  0029_user_login_lockout.py  0030_photo_ocr.py  0031_photo_ml_stage_status.py  0032_jobs_photo_id.py  0033_photo_face_source.py  0034_photo_object.py  0035_photo_location_source.py  0036_photo_work.py  0037_photo_work_stage_params.py  0038_files_domain.py  0039_file_text.py  0040_files_parent.py
app/: __init__.py  audit.py  auth.py  auth_acl.py  config.py  db.py  external.py  fts.py  http_headers.py  models.py  paths.py  shares.py
app/admin/: routes_audit.py  routes_database.py  routes_duplicates.py  routes_folders.py  routes_indexing.py  routes_jobs.py  routes_ml.py  routes_roots.py  routes_settings.py  routes_trash.py
app/api/: deps.py  main.py  routes_files.py  routes_photos.py  routes_setup.py
app/scanner/: discover.py  utils.py
app/tools/: __init__.py  cutover.py
app/watcher/: coalescer.py  main.py
app/web/static/: admin.html  index.html  login.html  manifest.json  setup.html  share.html  sw.js
app/web/static/css/: admin.css  gallery.css  login.css  pretendard.min.css  share.css
app/web/static/fonts/pretendard/: OFL.txt
app/web/static/i18n/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json  zh-TW.json
app/web/static/js/: api.js  common.js  i18n.js  inf-scroll.js  pwa-register.js  scroll-minimap.js
app/web/static/js/panels/: audit.js  duplicates.js  files.js  lightbox.js  mapview.js  shares.js  trash.js
app/worker/: dedup_cleanup.py  dispatcher.py  exif.py  exif_write.py  exiftool_pool.py  export.py  extract_text.py  index_file.py  index_generic.py  jobs.py  location_estimator.py  main.py  photo_work.py  rotate.py  thumbs.py  transcode.py
app/worker_ml/: __init__.py  _ort.py  categories.py  clip.py  dispatcher.py  faces.py  jobs.py  labels_yolo.py  main.py  ocr.py  yolo.py
config/: default.toml  local.example.toml
desktop/: README.md  app.py  build.ps1  myphotos.spec  requirements.txt
docs/: ACCESS_CONTROL_PLAN.md  FILES_PLAN.md  FRONTEND_PLAN.md
docs/install/: docker.md  linux.md  macos.md  synology.md  windows.md
docs/operations/: bulk-index-gpu.md  external-db.md  porting.md  post-install.md
scripts/: backup-db.sh  bootstrap.ps1  bootstrap.sh  download-frontend-libs.sh  fix-photo-perms.sh  gen-pwa-icons.py  install-ml-models.sh  install-systemd.sh  install-vendor-linux-x64.sh  migrate-db.py  migrate-sqlite-to-mariadb.py  myphotos.ps1  run-api.ps1  run-ml-worker.ps1  run-worker.ps1  setup.ps1  setup.sh  uninstall-systemd.sh  upload-ml-models.sh
systemd/: myphotos-api.service.in  myphotos-ml-worker.service.in  myphotos-watcher.service.in  myphotos-worker.service.in
tests/: conftest.py  test_acl.py  test_classify_ml.py  test_fts.py  test_smoke_routes.py  test_trash.py  test_worker_export.py  test_worker_jobs.py  test_worker_rotate.py
