[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myphotos"
version = "0.0.1"
description = "Self-hosted photo catalog with metadata indexing and web browsing"
requires-python = ">=3.11"
# Target runtime is Python 3.13 (Synology DSM community package).
# Lower bound kept at 3.11 so Windows dev hosts with 3.11/3.12 still work.
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "saintsc-ai" }]

dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",

  # Config / validation
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "tomli>=2.0; python_version<'3.11'",

  # DB
  "sqlalchemy>=2.0",
  "alembic>=1.13",

  # Image / metadata
  "pillow>=11.0",
  # NOTE: pillow-heif moved to optional 'heic' extra.
  # Reason: on some DSM/glibc combinations uv cannot match any wheel and
  # falls back to source build (needs libheif-dev). Keep core install
  # working; install HEIC support explicitly when the host supports it:
  #   uv pip install --python .venv/bin/python -e ".[heic]"

  # Filesystem watching / scheduling
  "watchdog>=4.0",
  "apscheduler>=3.10",

  # ML inference (CPU-only). Open lower-bounded pins so pip can pick
  # the right wheel per platform / Python version:
  #   - DSM 7.2 (glibc 2.17 manylinux2014) + Python 3.11/3.13 community
  #     package → onnxruntime 1.16.x wheels work; newer versions target
  #     manylinux_2_27 (glibc 2.27+) which DSM doesn't ship.
  #   - Windows / macOS / modern Linux → no manylinux constraint,
  #     latest wheels apply. Python 3.12+ specifically REQUIRES newer
  #     onnxruntime (1.16.x has no 3.12/3.13 wheels).
  # If you're on DSM and pip resolves to >1.16 and it fails to load,
  # pin explicitly in your own environment (`uv pip install
  # 'onnxruntime<1.17' 'numpy<2' 'tokenizers<0.20'`) before this
  # project install.
  "onnxruntime>=1.16",
  # Cap numpy <2: NumPy 2.x x86_64 wheels raise the SIMD baseline to
  # x86-64-v2 (SSE4.2/POPCNT) and abort at import on CPUs that lack it
  # ("NumPy was built with baseline optimizations: (X86_V2) but your
  # machine doesn't support: (X86_V2)") — common on older Atom-class
  # Synology NAS CPUs. 1.26.x keeps an SSE3 baseline and runs there.
  "numpy>=1.24,<2",
  # CLIP tokenizer (Round 2) — Rust-backed. Same story as above:
  # 0.20+ ships manylinux_2_28 wheels (DSM-incompatible) but works
  # everywhere else.
  "tokenizers>=0.15",

  # Auth — bcrypt directly (passlib has been flaky on recent bcrypt releases;
  # itsdangerous above is used by Starlette's SessionMiddleware for the
  # signed session cookie).
  "bcrypt>=4.0",
]

[project.optional-dependencies]
heic = [
  # HEIC/HEIF support. 0.x wheels bundle libheif statically; 1.x may build
  # from source on some hosts.
  "pillow-heif>=0.18,<1.0",
]
exif-extra = [
  # Optional secondary EXIF extractors (used as fallback chain)
  "pyexiv2>=2.12",
  "PyExifTool>=0.5",
]
ocr = [
  # OCR text extraction for search (RapidOCR on onnxruntime — reuses the
  # ML worker's runtime, no PyTorch). Bundles det/rec/cls ONNX models;
  # Korean needs a separate rec model (see docs). Activate with:
  #   uv pip install --python .venv/bin/python -e ".[ocr]"
  "rapidocr_onnxruntime>=1.3",
]
mariadb = [
  # Pure-Python driver for MySQL/MariaDB. Pick this over `mariadb` (the
  # MariaDB Connector/C wrapper) so install does not need libmariadb-dev
  # on every host. Activate with:
  #   uv pip install --python .venv/bin/python -e ".[mariadb]"
  "PyMySQL>=1.1",
  "cryptography>=42",   # required by some MariaDB auth plugins
]
postgres = [
  # psycopg 3 with the bundled binary distribution — no libpq build step
  # required on Windows / Synology DSM / generic Linux. Activate with:
  #   uv pip install --python .venv/bin/python -e ".[postgres]"
  # Use DSN scheme `postgresql+psycopg://...` so SQLAlchemy picks the
  # right driver. See docs/operations/external-db.md for the full setup
  # (CREATE ROLE / DATABASE + the known FTS / strftime caveats that
  # apply to every non-SQLite backend).
  "psycopg[binary]>=3.2",
]
dev = [
  "ruff>=0.6",
  "pytest>=8.3",
]

[project.scripts]
myphotos = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
